# localvid

./: Cargo.toml  README.md
resources/: localvid.desktop
src/: main.rs
